@@ -1,6 +1,7 @@
 /* cnf.c: read config files.
 
-   Copyright 1994, 1995, 1996, 1997, 2008, 2009, 2011, 2012, 2016 Karl Berry.
+   Copyright 1994, 1995, 1996, 1997, 2008, 2009, 2011, 2012, 2016,
+   2017 Karl Berry.
    Copyright 1997-2005 Olaf Weber.
 
    This library is free software; you can redistribute it and/or
@@ -105,7 +106,7 @@ do_line (kpathsea kpse, string line)
     while (ISSPACE (*line))
       line++;
     start = line;
-    while (!ISSPACE (*line) && *line != '=')
+    while (*line && !ISSPACE (*line) && *line != '=')
       line++;
 
     /* It's annoying to repeat all this, but making a tokenizing
